--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,14 @@
 	color:white;
 }
 
+#banner-container4 {
+	background: linear-gradient(0deg,rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../images/music.jpeg);
+	background-size:100% 100%;
+	width:auto;
+	height:600px;
+	color:white;
+}
+
 banner-par {
 	background-size:100%;
 	width:auto;
