--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,16 +52,17 @@
 	width:auto;
 	height:650px;
 	color:white;
-	margin-bottom:-300px;
+	margin-bottom:-400px;
 }
 
-/*#banner-container3 {
-	background: url(../images/music.jpeg);
-	background-size:100%;
-	width:auto;
-	height:auto;
-	color:white;
-}*/
+#taco-container {
+	margin-top:75px;
+}
+
+#music-container {
+	width:40%;
+	margin:auto;
+}
 
 
 
