--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@
 
 #banner-container {
 	background: url(../images/wd-banner.png);
+	background-attachment:fixed;
 	width:auto;
 	height:600px;
 	color:white;
@@ -28,6 +29,7 @@
 
 #banner-container2 {
 	background: linear-gradient(0deg,rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../images/tacos.jpg);
+	background-attachment:fixed;
 	background-size:100% 100%;
 	width:auto;
 	height:650px;
@@ -37,6 +39,7 @@
 
 #banner-container3 {
 	background: linear-gradient(0deg,rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../images/music.jpeg);
+	background-attachment:fixed;
 	background-size:100% 100%;
 	width:auto;
 	height:675px;
@@ -65,6 +68,10 @@
 	color:#333333;
 } 
 
+#random-taco-div {
+	margin-top:-50px;
+}
+
 banner-par {
 	background-size:100%;
 	width:auto;
@@ -78,6 +85,8 @@ banner-par {
   text-shadow: 0 2px 0 rgba(0, 0, 0, 0.3);
 }
 
+
+
 h5 {
 	color:#efefef;
 
@@ -88,6 +97,3 @@ h5 {
 	height:45px;
 }
 
-footer {
-
-}
