--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,9 @@
 	margin:auto;
 }
 
-
+a:hover {
+	color:hotpink;
+}
 
 .nav-wrapper2 {
 	width:50%;
@@ -93,6 +95,12 @@
 	margin-top:-50px;
 }
 
+#create-party {
+	font-size:26px;
+	line-height:20px;
+	margin-top:75px;
+}
+
 banner-par {
 	background-size:100%;
 	width:auto;
@@ -104,6 +112,10 @@ banner-par {
 .simple {
   font-size:50px;
   text-shadow: 0 2px 0 rgba(0, 0, 0, 0.3);
+}
+
+.highlighted {
+    background-color: rgba(0,0,0,.5);
 }
 
 
